--- a/q/273927.html
+++ b/q/273927.html
@@ -26,14 +26,74 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
-<tr d-ix="2"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
-<tr d-ix="3"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
-<tr d-ix="4"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
-<tr d-ix="5"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
+<tr d-ix="0"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
+<tr d-ix="2"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
+<tr d-ix="3"><td>071</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="4"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
+<tr d-ix="5"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
+<tr d-ix="6"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>&quot;D1›Di4L+DŠ/®δ.V+&gt;ß&quot;©.V
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/273930/52210"><em>@xnor</em>'s Python answer</a>, so make sure to upvote that answer as well.</p>
+<p><a href="https://tio.run/##ASoA1f9vc2FiaWX//yJEMeKAukRpNEwrRMWgL8KuzrQuVis@w58iwqkuVv//NjQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AUcAuP9vc2FiaWX/MzLDnTYgMjHFuG/CqzXCsMKqdnk/IiDihpIgIj95/yJEMeKAukRpNEwrRMWgL8KuzrQuVis@w58iwqkuVv8s/w" rel="nofollow noreferrer">verify most test cases</a> (it'll time out before it has output all test cases).</p>
+<p>Using the given formula would be <strong>32 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></strong> instead:</p>
+<pre><code>•¬òÃ,v₅aw°Üÿ∊•82в2ôε`Š/4.nî5*+}ß
+</code></pre>
+<p><a href="https://tio.run/##AUAAv/9vc2FiaWX//@KAosKsw7LDgyx24oKFYXfCsMOcw7/iiIrigKI4MtCyMsO0zrVgxaAvNC5uw641Kit9w5///zY0" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##AWAAn/9vc2FiaWX/MzLDnTYgMjHFuG/CqzXCsMKqdnk/IiDihpIgIj95Vv/igKLCrMOyw4MsduKChWF3wrDDnMO/4oiK4oCiODLQsjLDtM61WXNgxaAvNC5uw641Kit9w5//LP8" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+<p>Uses recursive method:</p>
+<p><span class="math-container">$$f(n) = \begin{cases}
+0, &amp; \text{if $n\leq1$} \\
+\min(f(\frac{n}{2})+3, f(\frac{n}{3})+4, f(\frac{n}{4})+5, f(\frac{n}{5})+6), &amp; \text{if $n&gt;1$}
+\end{cases}$$</span></p>
+
+<pre class="lang-python prettyprint-override"><code>&quot;...&quot;             # Define the recursive string explained below
+     ©            # Store it in variable `®` (without popping)
+      .V          # Pop and evaluate it as 05AB1E code
+                  # (after which the result is output implicitly)
+
+D                 # Duplicate the current value n
+                  # (which will use the implicit input in the first iteration)
+ 1›               # Pop and check whether it's larger than 1
+   D              #  Duplicate this check
+   i              #  Pop the copy, and if it's truthy:
+    4L            #  Push list [1,2,3,4]
+      +           #  Add the truthy check that's still on the stack: [2,3,4,5]
+       D          #  Duplicate this list
+        Š         #  Tripleswap to [2,3,4,5],n,[2,3,4,5]
+         /        #  Divide [n/2,n/3,n/4,n/5]
+           δ      #  Map over each value:
+          ® .V    #   And do a recursive eval to `®`
+              +   #  Then add the values in the two lists together:
+                  #   [2+f(n/2),3+f(n/3),4+f(n/4),5+f(n/5)]
+               &gt;  #  Increase each by 1
+                  #   [3+f(n/2),4+f(n/3),5+f(n/4),6+f(n/5)]
+                ß #  Pop and leave the minimum
+                  # (implicit else: use the duplicated falsey check, aka 0)
+</code></pre>
+
+<pre class="lang-python prettyprint-override"><code>•¬òÃ,v₅aw°Üÿ∊•     # Push compressed integer 50972899172091152076282460330 
+  82в              # Convert it to base-82 as list:
+                   #  [1,0,2,3,3,4,5,6,6,7,9,8,27,12,81,16]
+     2ô            # Split it into pairs:
+                   #  [[1,0],[2,3],[3,4],[5,6],[6,7],[9,8],[27,12],[81,16]]
+       ε           # Map over each pair [u,c]:
+        `          #  Pop and push both values to the stack
+         Š         #  Triple-swap u,c to c,i,u, where i is the implicit input
+          /        #  Divide the input by u
+           4.n     #  Take log_4 of it
+              î    #  Ceil it
+               5*  #  Multiply by 5
+                 + #  Add c
+       }ß          # After the map: pop and leave the minimum
+                   # (which is output implicitly as result)
+</code></pre>
+<p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to compress large integers?</em> and <em>How to compress integer lists?</em>)</a> to understand why <code>•¬òÃ,v₅aw°Üÿ∊•</code> is <code>50972899172091152076282460330 </code> and <code>•¬òÃ,v₅aw°Üÿ∊•82в</code> is <code>[1,0,2,3,3,4,5,6,6,7,9,8,27,12,81,16]</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
 <pre><code>f(1)=0.
 f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 </code></pre>
@@ -42,29 +102,29 @@ f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 <p>With the help of <code>table</code> in the header section, it computes all test cases almost instantly. Thanks to the <code>/&gt;</code> operator which does ceil-ed integer division, all intermediate arguments are integers without any complications, and we can simply pattern-match the 1 as the base case.</p>
 <p>Bitwise not operator <code>~</code> exists in Picat, but it doesn't like putting the two symbols <code>-~</code> side-by-side, so the usual <code>-~</code> trick does not save any bytes.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>Port of xnor's 50 byte Python solution.</p>
 <pre><code>f ©5ò2ÈÒßU/XÃrm
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZiCpNfIyyNLfVS9Yw3Jt&amp;input=MzI" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 71 bytes</h1>
 <pre><code>$-&gt;n-&gt;min map[0 1 3 2 7 6 4 3 8 9 12 27 16 81 6 5]=&gt;[&amp;+5*ceil log//n&amp;4]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the (fixed) formula given in the challenge.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>with(Math)f=n=&gt;min(...[81,27,9,6,5,3,2,1].map((v,i)=&gt;ceil(log(n/v)/log(4))*5-~(37115838&gt;&gt;i*4&amp;15)))
 </code></pre>
 <p><a href="https://tio.run/##ZdJBboMwEEDRfU/BqrIjB5ixxzYLuEFPUHWBaNI4IhA1iO56dVqqENzBK0vP8pfGPtdjfWs@w3XYd/37YZq@wnASL/VwkseyK6tL6ESapq8eFDpVKKtIaYUK3tJLfRViVEGWVXMIrWj7D9Flo8zmjZFyR/tvoR0Aee2rKuzMM5CUcmr67ta3h3Q@dxSQ/C0pkyxL8qf/iDFqhiZGYuhj9AzBRgg8qjFWXrUmVp4F9JHyLpJdFXmXACPlXcjRrMq7mBu/Ku@avLDrGHnXQ4GrbrpWe/NQ2szKWf9Q3rVE2i5qeBc05A4X5V20CMYsyruEBr1fdPO@v9MgZ@8/Y/Op8sIB4V23c57XcjNOPw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 68 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 68 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SORTN(5*CEILING(LOG(A1/{1;2;6;3;9;27;81;5},4))+{1;3;7;4;8;12;16;6}) 
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 48 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n&gt;1and-~min(i+f(n/i)for i in b"&#2;&#3;&#4;&#5;")
 </code></pre>
