--- a/q/273875.html
+++ b/q/273875.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
-<tr d-ix="1"><td>042</td><td>Ruby</td><td>240704T163832Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273924#273924">Jordan</a></td></tr>
+<tr d-ix="0"><td>nan</td><td></td><td>240705T093913Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273936#273936">Saurabh </a></td></tr>
+<tr d-ix="1"><td>037</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
 <tr d-ix="2"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 <tr d-ix="3"><td>1785</td><td>Nibbles</td><td>240704T155522Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273923#273923">Dominic </a></td></tr>
 <tr d-ix="4"><td>050</td><td>C gcc</td><td>240703T211432Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273919#273919">corvus_1</a></td></tr>
@@ -61,7 +61,25 @@
 <tr d-ix="32"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
 <tr d-ix="33"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 37 bytes</h1>
+<div id="pu0" class="pu"><p>Here's a short solution in Python for your problem:</p>
+<pre class="lang-php prettyprint-override"><code>s=input()
+i=1
+while s:
+    print(s[:i])
+    s=s[i:]
+    i*=2
+</code></pre>
+<p><strong>Explanation:</strong></p>
+<ol>
+<li>s=input(): Reads the input string.</li>
+<li>i=1: Initializes the segment length to 1.</li>
+<li>while s:: Loops while there are characters left in the string.</li>
+<li>print(s[:i]): Prints the first i characters of the string.</li>
+<li>s=s[i:]: Updates the string by removing the first i characters.</li>
+<li>i*=2: Doubles the segment length for the next iteration.</li>
+</ol>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 37 bytes</h1>
 <ul>
 <li>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/92901/dingus">Dingus</a></li>
 <li>-8 bytes thanks to <a href="https://codegolf.stackexchange.com/users/18535/g-b">G B</a></li>
@@ -71,12 +89,6 @@
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN1XTbHXtinUSbQ2ri9XUooujDXQSY3W00oCsRD29WJ1E7cTY2FqI4l0FpSXFCmnRSolJySmpaekZmVnZObl5-UqxXBAFMFMB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>@OP just to let you know, the easy tasks are welcome! :)</p>
 <p>A recursive function with 2 variables: the original string and the counter. The function chops a string piece, adds it to the unnamed output vector and updates the counter until the string is empty.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 42 bytes</h1>
-<p>This came out looking like a port of <a href="https://codegolf.stackexchange.com/a/273878/11261">squareroot12621’s Python solution</a>, though I arrived at it independently.</p>
-<pre class="lang-ruby prettyprint-override"><code>F=-&gt;s,n=1{s[0]?[s[..n],*F[s[n..],2*n]]:[]}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN7XcbHXtinXybA2ri6MNYu2ji6P19PJidbTcgKw8Pb1YHSOtvNhYq-jYWoiObQUKbtFKiUnJKalp6RmZWdk5uXn5SrEQSZixAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/abrudz/dyalog-apl-extended" rel="nofollow noreferrer">APL (Dyalog Extended)</a>, <s>16</s> 12 bytes</h1>
 
