--- a/q/273927.html
+++ b/q/273927.html
@@ -26,18 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2613</td><td>Nibbles</td><td>240705T145120Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273943#273943">Dominic </a></td></tr>
-<tr d-ix="1"><td>051</td><td>JavaScript Node.js</td><td>240705T110815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273939#273939">l4m2</a></td></tr>
-<tr d-ix="2"><td>024</td><td>Charcoal</td><td>240705T091455Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273935#273935">Neil</a></td></tr>
-<tr d-ix="3"><td>045</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
-<tr d-ix="4"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
-<tr d-ix="5"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
-<tr d-ix="6"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
+<tr d-ix="0"><td>015</td><td>Japt</td><td>240705T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273933#273933">Shaggy</a></td></tr>
+<tr d-ix="1"><td>2613</td><td>Nibbles</td><td>240705T145120Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273943#273943">Dominic </a></td></tr>
+<tr d-ix="2"><td>051</td><td>JavaScript Node.js</td><td>240705T110815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273939#273939">l4m2</a></td></tr>
+<tr d-ix="3"><td>024</td><td>Charcoal</td><td>240705T091455Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273935#273935">Neil</a></td></tr>
+<tr d-ix="4"><td>045</td><td>Arturo</td><td>240704T210655Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273929#273929">chunes</a></td></tr>
+<tr d-ix="5"><td>023</td><td>05AB1E</td><td>240705T084446Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273934#273934">Kevin Cr</a></td></tr>
+<tr d-ix="6"><td>041</td><td>Picat</td><td>240705T022349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273931#273931">Bubbler</a></td></tr>
 <tr d-ix="7"><td>098</td><td>JavaScript ES6</td><td>240704T203314Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273928#273928">Arnauld</a></td></tr>
 <tr d-ix="8"><td>068</td><td>Google Sheets</td><td>240705T041809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273932#273932">z..</a></td></tr>
 <tr d-ix="9"><td>048</td><td>Python 3</td><td>240704T235711Z</td><td><a href="https://codegolf.stackexchange.com/questions/273927/minimum-number-of-select-all-copy-paste-steps-for-a-string-containing-n-copies-o/273930#273930">xnor</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 26 nibbles (13 bytes)</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/273930/58974">xnor's Python solution</a>.</p>
+<pre><code>&gt;1©5ò2ÈÒßU/XÃrm
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=PjGpNfIyyNLfVS9Yw3Jt&amp;input=MzIKLU4" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>&gt;1©5ò2ÈÒßU/XÃrm     :Implicit input of integer U
+&gt;1                  :Greater than 1
+  ©                 :Logical AND with
+   5ò2              :  Range [2,5]
+      È             :  Map each X
+       Ò            :    Subtract the bitwise NOT of
+        ßU/X        :      A recursive call with argument U/X
+            Ã       :  End map
+             r      :  Reduce by
+              m     :    Minimum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 26 nibbles (13 bytes)</h1>
 <pre><code> `; 1 -@$ 0 `/ . +~,4 + _ * @$ +$~ [
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LcsxDoIwAIXh_Z3iDZ0sYF8pUMLiPRwkJJqYGBdh5SIsXYxn4jaSwPrn_5bf-zkMr_snpe80PvK4GvYdxfxi6NifWdDOWaDljSdu0ZqZ1_09SFq94FEioEKNBhEt5CBBHiqhAFVQDTVQhFp4t9M_" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -59,13 +76,13 @@
                               +$~           #     and i+1 (steps needed to multiply copies by i)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 51 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 51 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=6)=&gt;n&gt;1&amp;&amp;Math.min(i+f(n/--i),i&gt;2?f(n,i):1/0)
 </code></pre>
 <p><a href="https://tio.run/##ZdJRbsMgDIDh950iTxVoTYMd45BJyU6wQ0RdszF1ZFqrXT9rpFKQ4fVD/MjwNf1Nl@Ov/7nWYXk/res8qLD3A@thDCPsdm/T9fPw7YPyz7MKTV17vfcjvs7bNv0CjdHrcQmX5Xw6nJcPddsF1ba0rpqmMk85zgqrDFuBlKMVaHNkgS5HJxA4Q5A3ajFXeSWmXOWdAF2msouWk6LsWsBMZRcMUlLZRUMuqeyS6TnNWHYd9Ji06HLr6KG2mFXH7qGyy9a2HJVkF1owHUaVXWQEoqjF2yOhc1GL971Nw3Z8/zbFjzN9BxbvWs55W/FkXP8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
 <pre><code>ＦＮ⊞υ∨¬ι⁺³⌊Ｅ⁴⁺κ§υ÷ι⁺²κＩ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##LYs5DsIwEAB7XrHlWjJNQDRUCBoXCf6CSYyyii/Z3ojfG0XylDOaeTV5jsa19o0ZUIXEdWL/sRmFAM1lRZbwzjjFiiQkaMcFLxJGCuTZ42gSXrveJDyqCov9HZMK9UU7LRap90HCJjr3k84UKj5NqahjQj5ka8OtnXf3Bw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Based on @xnor's approach but using dynamic programming instead of recursion.</p>
@@ -79,7 +96,7 @@
 </code></pre>
 <p>Output the result for <code>n</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>49</s></sup> 45 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>49</s></sup> 45 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n-&gt;(n&gt;1)?[2..5|map=&gt;[+1+f//n&lt;=&amp;]|min]-&gt;0
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?cZRVrt" rel="nofollow noreferrer">Try it!</a></p>
@@ -91,7 +108,7 @@
 <p><a href="http://arturo-lang.io/playground?PQK9Cx" rel="nofollow noreferrer">Try it!</a></p>
 <p>The formula in the OP.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 23 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&quot;D1›Di4L+DŠ/®δ.V+&gt;ß&quot;©.V
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/273930/52210"><em>@xnor</em>'s Python answer</a>, so make sure to upvote that answer as well.<br />
@@ -151,7 +168,7 @@ D                 # Duplicate the current value n
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (sections <em>How to compress large integers?</em> and <em>How to compress integer lists?</em>)</a> to understand why <code>•¬òÃ,v₅aw°Üÿ∊•</code> is <code>50972899172091152076282460330 </code> and <code>•¬òÃ,v₅aw°Üÿ∊•82в</code> is <code>[1,0,2,3,3,4,5,6,6,7,9,8,27,12,81,16]</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 41 bytes</h1>
 <pre><code>f(1)=0.
 f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 </code></pre>
@@ -159,12 +176,6 @@ f(N)=[f(N/&gt;I)+I+1:I in 2..5].min.
 <p>Same approach as <a href="https://codegolf.stackexchange.com/a/273930/78410">xnor's Python answer</a>: recurses through the cases of <code>ctrl+A C V{1,4}</code> to get at least N characters as a result.</p>
 <p>With the help of <code>table</code> in the header section, it computes all test cases almost instantly. Thanks to the <code>/&gt;</code> operator which does ceil-ed integer division, all intermediate arguments are integers without any complications, and we can simply pattern-match the 1 as the base case.</p>
 <p>Bitwise not operator <code>~</code> exists in Picat, but it doesn't like putting the two symbols <code>-~</code> side-by-side, so the usual <code>-~</code> trick does not save any bytes.</p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 15 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<p>Port of xnor's 50 byte Python solution.</p>
-<pre><code>f ©5ò2ÈÒßU/XÃrm
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZiCpNfIyyNLfVS9Yw3Jt&amp;input=MzI" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu7" class="pu"><h1>JavaScript (ES6), 98 bytes</h1>
 <p>Basically a direct implementation of the (fixed) formula given in the challenge.</p>
